Nouvelle intégration du composant "ReturnTotop" dans le routage du projet frontend.

--- a/star-wars-blog/src/pages/Legal/Legal.scss
+++ b/star-wars-blog/src/pages/Legal/Legal.scss
@@ -13,8 +13,8 @@ $background-color_1: white;
 	width: calc(70% - 2px);
 	border-left: 1px solid $color_2;
     border-right: 1px solid $color_2;
-	margin-left: auto;
-	margin-right: auto;
+	// margin-left: auto;
+	// margin-right: auto;
 	background-color: $background-color_1;
 	display: flex;
 	flex-direction: column;
