--- a/star-wars-blog/src/pages/Category/Category.scss
+++ b/star-wars-blog/src/pages/Category/Category.scss
@@ -13,8 +13,8 @@ $background-color_1: black;
 .app-category {
 	width: calc(80% - 2px);
 	min-height: 100vh;
-	margin-left: auto;
-	margin-right: auto;
+	// margin-left: auto;
+	// margin-right: auto;
 	display: flex;
 	flex-direction: column;
 	justify-content: baseline;
