Correction d'un bug d'affichage sur la page "Shopping" sur mobile (overflow sur la droite) + ajout d'un peu plus de padding-top sur le titre de la page "Product" pour éviter un chevauchement avec le composant "Basket" sur mobile.

--- a/star-wars-blog/src/pages/ProductPage/ProductPage.scss
+++ b/star-wars-blog/src/pages/ProductPage/ProductPage.scss
@@ -25,7 +25,7 @@ $font-family_2: 'Starjedi';
         left: 5%;
         z-index: 2;
         display: flex;
-        width: 100%;
+        width: auto;
         justify-content: flex-start;
         .product-page-arrow-link {
             position: absolute;
