--- a/star-wars-blog/src/pages/ShoppingPage/ShoppingPage.scss
+++ b/star-wars-blog/src/pages/ShoppingPage/ShoppingPage.scss
@@ -73,6 +73,7 @@ $font-family_2: 'Starjedi';
         height: fit-content;
         .shopping-page-title {
             font-size: 22px;
+            margin-top: 60px;
         }
         .shopping-page-maintenance {
             font-size: 12px;
