--- a/star-wars-blog/src/components/SearchBar/SearchBar.scss
+++ b/star-wars-blog/src/components/SearchBar/SearchBar.scss
@@ -24,15 +24,14 @@ $background-color_2: black;
 	justify-content: center;
 	align-items: center;
 	background-color: $background-color_1;
-	overflow: hidden;
 	position: absolute;
 }
 .search-input {
 	z-index: 2;
-	width: 100%;
+	width: calc(100% - 12px);
 	height: 45px;
-	padding: 0;
-	padding-left: 10px;
+	padding-left: 5px;
+	padding-right: 5px;
 	border: 1px solid gainsboro;
 	text-align: center;
 	color: $color_3;
@@ -41,8 +40,9 @@ $background-color_2: black;
 	border-radius: 6px;
 	background-color: $background-color_2;
 	&:focus {
-		outline: 4px solid $color_4;
 		border: none;
+		width: calc(100% - 10px);
+		outline: 4px solid $color_4;
 		border-radius: 6px;
 	}
 	&::placeholder {
@@ -55,7 +55,6 @@ $background-color_2: black;
 		padding-bottom: 50px;
 	}
 	.search-input {
-		width: 100%;
 		height: 35px;
 		font-size: 14px;
 		border-radius: 6px;
