1. Modifications dans le backend : migration du modèle "User" et mise à jour des contrôleurs liés.
2. Modifications dans le frontend : adaptation des composants "Header" et "Card" et de la page "Category" pour une UX optimisée.

3. Modifications dans le frontend et le backend : mise à jour des images des Dockerfiles pour des raisons de sécurité.

--- a/star-wars-blog/src/components/Header/Header.scss
+++ b/star-wars-blog/src/components/Header/Header.scss
@@ -45,10 +45,10 @@ $background-color_1: black;
 		height: auto;
 	}
 }
-.link-logo-enabled {
+.link-logo-enabled, .main-title-navlink-active {
 	cursor: pointer;
 }
-.link-logo-disabled {
+.link-logo-disabled, .main-title-navlink-inactive {
 	cursor: default;
 }
 .title-and-links {
@@ -68,6 +68,10 @@ $background-color_1: black;
 		margin-top: 0;
 		margin-right: 0;
 		cursor: default;
+		a {
+			text-decoration: none;
+			color: $color_1;
+		}
 	}
 	nav {
 		width: 99%;
