Correction d'un léger bug graphique sur la page du marché : une hauteur de page minimum a été ajoutée.

--- a/star-wars-blog/src/pages/MarketPage/MarketPage.scss
+++ b/star-wars-blog/src/pages/MarketPage/MarketPage.scss
@@ -60,6 +60,7 @@ $font-family_2: 'Starjedi';
         display: flex;
         width: 75%;
         height: fit-content;
+        min-height: 500px;
         justify-content: space-around;
         align-items: flex-start;
         flex-wrap: wrap;
