Mise en place d'un petit effet CSS d'apparition progressive sur les data du produit dans la page "ProductPage" (partie shopping).

--- a/star-wars-blog/src/theme/index.scss
+++ b/star-wars-blog/src/theme/index.scss
@@ -59,6 +59,9 @@ code {
 		transform: scaleX(1) scaleY(1);
 	}
 }
+.fade-in-long {
+	animation: fadein 0.7s;
+}
 .fade-in {
     animation: fadein 0.3s;
 }
