--- a/star-wars-blog/src/components/Header/Header.scss
+++ b/star-wars-blog/src/components/Header/Header.scss
@@ -112,6 +112,12 @@ $background-color_1: black;
 	height: fit-content;
 	text-align: center;
 }
+.header-div-connection-not-logged {
+	display: flex;
+	flex-direction: column;
+	margin-top: 7%;
+	gap: 25px;
+}
 .header-div-logged-image {
 	z-index: 1;
 	display: flex;
@@ -164,14 +170,16 @@ $background-color_1: black;
 	}
 }
 .connection-link {
-	// margin-top: 25px;
+	line-height: 0;
+	margin: 0;
 	font-size: 16px;
-	line-height: 1.8;
 	text-decoration: underline;
 	color: $color_2;
 	font-weight: bold;
 	font-family: $font-family_2;
 	cursor: pointer;
+	text-align: left;
+	width: fit-content;
 	&:hover {
 		color: $color_1;
 	}
@@ -223,6 +231,10 @@ nav {
 			margin-left: 83px;
 		}
 	}
+	.header-div-connection-not-logged {
+		margin-top: 10%;
+		gap: 20px;
+	}
 	.header-div-connection {
 		margin-right: 0;
 		right: 8px;
@@ -260,6 +272,10 @@ nav {
 			margin-left: 10px;
 			line-height: 32px;
 		}
+	}
+	.header-div-connection-not-logged {
+		margin-right: -8px;
+		gap: 20px;
 	}
 	.header-div-connection {
 		right: 20px;
