--- a/frontend/src/components/ModifyUserAdmin/ModifyUserAdmin.scss
+++ b/frontend/src/components/ModifyUserAdmin/ModifyUserAdmin.scss
@@ -11,6 +11,17 @@
     flex-direction: column;
     gap: 40px;
     align-items: center;
+    animation: dataAnimation 1s ease-in-out;
+}
+@keyframes dataAnimation {
+    from {
+        opacity: 0;
+        transform: translateY(-12px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 .other-user-password-input-div {
 	width: 100%;
@@ -108,13 +119,18 @@ input[type='file'] {
 .display-flex {
 	display: flex;
 }
+.other-user-label {
+    font-size: 16px;
+    margin: -20px 0 -33px 0;
+    text-transform: lowercase;
+}
 /* Ici : media queries pour la troisième partie tablette */
 @media screen and (max-width: 767px) {
     .unvalid-password-text {
         font-size: 10px;
     }
     .other-user-form-update {
-        gap: 25px;
+        gap: 35px;
     }
     .other-user-input {
         height: 25px;
@@ -132,5 +148,9 @@ input[type='file'] {
     .other-user-submit-button {
         height: 25px;
         font-size: 14px;
+    }
+    .other-user-label {
+        font-size: 12px;
+        margin: -20px 0 -33px 0;
     }
 }
