--- a/frontend/src/theme/Account.scss
+++ b/frontend/src/theme/Account.scss
@@ -258,26 +258,14 @@ input[type='file'] {
     border-radius: 20px;
 }
 .account-label {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border: none;
-	outline: none;
-	border-radius: 20px;
-	width: 94%;
-	height: 33px;
-	margin: 0;
-	font-size: 18px;
-	color: $color_3;
-	padding-left: 15px;
-	padding-right: 15px;
-	background-color: $background-color_5;
-	font-family: $font-family_1;
-	cursor: pointer;
-	&:active {
-		outline: 1px solid gainsboro;
-	}
+	font-size: 16px;
+	margin: -10px 0 -35px 0;
+	text-align: center;
+	text-transform: lowercase;
+	cursor: default;
+	width: 100%;
 }
+
 .input-valid-img {
 	background-color: transparent;
 	width: 25px;
@@ -313,6 +301,14 @@ input[type='file'] {
 		border-radius: 20px;
 	}
 }
+@keyframes opacityAnimation {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 .delete-user {
 	font-family: $font-family_1;
 	border: none;
@@ -338,6 +334,7 @@ input[type='file'] {
 		outline: 4px solid gainsboro;
 		border-radius: 20px;
 	}
+	animation: opacityAnimation 1s ease-in-out;
 }
 .account-delete-section {
 	gap: 40px;
@@ -347,6 +344,16 @@ input[type='file'] {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	.account-form-delete-section {
+		.account-form-delete-label {
+			font-family: $font-family_1;
+			font-size: 18px;
+			margin-bottom: -25px;
+			text-transform: lowercase;
+			text-align: center;
+			cursor: default;
+		}
+	}
 }
 .link-to-admin {
 	font-size: 22px;
@@ -400,6 +407,13 @@ input[type='file'] {
 	.account-page {
 		width: calc(100% - 2px) !important;
 	}
+	.account-form-update {
+		gap: 25px !important;
+	}
+	.account-label {
+		font-size: 14px;
+		margin: -10px 0 -22px 0;
+	}
 }
 /* Ici : media queries pour la troisième partie tablette */
 @media screen and (max-width: 767px) {
@@ -434,7 +448,6 @@ input[type='file'] {
 		}
 	}
 	.account-form-update {
-		gap: 25px !important;
 		input {
 			height: 25px !important;
 			font-size: 14px !important;
@@ -463,6 +476,10 @@ input[type='file'] {
 			font-size: 14px !important;
 		}
 		gap: 25px !important;
+		.account-form-delete-label {
+			font-size: 14px !important;
+			margin-bottom: -13px !important;
+		}
 	}
 	.delete-user {
 		width: fit-content !important;
