Corrections au niveau du design de certains composants du projet.

--- a/frontend/src/components/ReturnToTop/ReturnToTop.scss
+++ b/frontend/src/components/ReturnToTop/ReturnToTop.scss
@@ -1,6 +1,6 @@
 $color_1: rgb(53, 155, 155);
 $color_2: black;
-$color_3: white;
+$color_3: rgb(53, 255, 255);
 $font-family_1: Arial, Helvetica, sans-serif;
 
 
